[package]
name = "hybrid-connection-health"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }

clap = { version = "4.5", features = ["derive"] }

uuid = { version = "1.10", features = ["v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

libp2p = { version = "0.51.4", default-features = false, features = [
  "tcp",
  "dns",
  "async-std",
  "websocket",
  "noise",
  "yamux",
  "mplex",
  "mdns",
] }
