[package]
name = "hybrid-connection-health"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4.5.54", features = ["derive"] }

libp2p = { version = "0.56.0", features = [
  "tokio",
  "mdns",
  "request-response",
  "tcp",
  "noise",
  "yamux",
  "cbor",
  # Production peer discovery features
  "identify",    # Address discovery and protocol negotiation
  "kad",         # Kademlia DHT for peer discovery
  "ping",        # Liveness checks
  "relay",       # Circuit relay for NAT traversal
  "dcutr",       # Direct connection upgrade (hole punching)
  "autonat"      # Automatic NAT detection
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
uuid = { version = "1.19.0", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
